2011-09-24  Jamison Hope  <jrh@theptrgroup.com>

	* srfi14.scm: Update character sets to match Unicode 6 and the
	Java-7 java.lang.Character predicates.

2011-05-02  Per Bothner  <per@bothner.com>

	* syntaxutils.scm (unrewrite-let): Update for new LetExp representation.

2011-02-25  Jamison Hope  <jrh@theptrgroup.com>

	* srfi13.scm: Fixes to allows compilation without warnings.
	(check-arg, char-cased?): New procedures.
	(:optional, let-optionals*): New syntax.

2011-02-10  Jamison Hope  <jrh@theptrgroup.com>

	* srfi14.scm: Fix Java-6 dependency.

2011-02-08  Jamison Hope  <jrh@theptrgroup.com>

	* srfi14.scm: New implementation of SRFI-14.
	* Makefile.am: Update accordingly.

2011-01-17  Per Bothner  <per@bothner.com>

	* syntaxutils.scm (rewrite-form): Call Language#getCompilation rather
	than hard-wiring in call the Translator constructor.

2011-01-03  Per Bothner  <per@bothner.com>

	* enums.scm (%define-enum): Inline use of symbol-append.
	Use string literal instead of quoted symbol for "[]".
	(symbol-append): Remove function.

2010-11-20  Philip L. Bewig
            Jamison Hope <jrh@theptrgroup.com>
            Per Bothner  <per@bothner.com>

	Implementation of SRFI-41.
	* StreamsPrimitive.scm: New file, implements (streams primitive).
	* StreamsDerived.scm: New file, implements (streams derived).
	* Streams.scm: New file, implements (streams).
	* StreamsType.scm: New file, defines stream-type.
	* Makefile.am (java_SCM): Update accordingly.

2010-11-18  Per Bothner  <per@bothner.com>

	* DefineRecordType.scm (define-record-type):  Instead of expanding to
	define-simple-class, expand to define-class with an explicit
	'interface: #f' argument.  This is to force a member class, rather
	than a package-level class.

2010-11-06  Per Bothner  <per@bothner.com>

	* enums.scm (%define-enum): Add static valueOf method.

2010-10-28  Jamison Hope  <jrh@theptrgroup.com>
	    Per Bothner  <per@bothner.com>

	* enums.scm: New module implements define-enum.