@@ -79,6 +79,6 @@
 	 (sub-entry (invoke disp-entry 'lookup sub-char)))
     (if (eq? sub-entry #!null) #f sub-entry)))
 
-(define (define-reader-ctor (key :: <symbol>) (proc :: <procedure>)
-	 #!optional (readtable :: <readtable> (current-readtable)))
-  (*:putReaderCtor readtable key proc))
+(define (define-reader-ctor (key ::gnu.mapping.SimpleSymbol) (proc ::procedure)
+	 #!optional (readtable ::readtable (current-readtable)))
+  (*:putReaderCtor readtable key:name proc))
